<resources>
    <string name="app_name">玩安卓</string>
    <string name="my_todo">我的 TODO</string>
    <string name="my_collection">我的收藏</string>
    <string name="login_out">退出登录</string>
    <string name="collected">已收藏</string>
    <string name="collect">收藏</string>
    <string name="public_accounts">公众号</string>
    <string name="common_websites">常用网站</string>
    <string name="knowledge_tree">知识体系</string>
    <string name="navigation">导航</string>
    <string name="home">主页</string>
    <string name="me">个人中心</string>
    <string name="change_language">修改语言</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="english" translatable="false">English</string>
    <string name="load_more">正在加载…</string>
    <string name="author_is">作者：%s</string>
    <string name="sharer_is">分享人: %s</string>
    <string name="unknown">未知</string>
    <string name="time_is">时间：%s</string>
    <string name="no_more_data">我是有底线的</string>
    <string name="please_login_first">请先登录</string>
    <string name="envelope">封面</string>
    <string name="avatar">头像</string>
    <string name="stay_tuned">敬请期待</string>
    <string name="tourist">游客</string>
    <string name="stay_tuned_hint">没啥好期待的</string>
    <string name="please_input_your_account">请输入账号</string>
    <string name="please_input_your_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="go_to_register">去注册</string>
    <string name="close">关闭</string>
    <string name="are_you_sure_to_login_out">确定退出登陆吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="completed_todo">已完成待办</string>
    <string name="new_todo">新建待办</string>
    <string name="save">保存</string>
    <string name="content_cannot_be_empty">内容不能为空</string>
    <string name="are_you_sure_to_delete">确定删除吗？</string>
    <string name="please_input_your_password_again">请再次输入密码确认</string>
    <string name="register">注册</string>
    <string name="register_successful">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="password_did_not_match">两次输入的密码不一致</string>
    <string name="user_name_cannot_be_empty">用户名不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="delete_fail">删除失败</string>
    <string name="add_fail">添加失败</string>
    <string name="update_fail">更新失败</string>
    <string name="please_switch_to_uncompleted_todo_page">请切换到未完成页面再新建待办</string>
</resources>
