<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".me.MeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUserLoginStatus"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="22dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_avatar_non_tourist" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvUserDescription"
                app:layout_constraintEnd_toStartOf="@id/btnLogin"
                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="@id/ivAvatar"
                tools:text="游客游客游客游客游客游客游客游客游客游客游客游客游客游客" />

            <TextView
                android:id="@+id/tvUserDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
                app:layout_constraintEnd_toEndOf="@id/tvUserName"
                app:layout_constraintStart_toStartOf="@id/tvUserName"
                app:layout_constraintTop_toBottomOf="@id/tvUserName"
                tools:text="平平无奇程序员平平无奇程序员" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/btn_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUserCenterContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvUserLoginStatus">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp">

            <Button
                android:id="@+id/btnChangeLanguage"
                style="@style/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnMyTodo"
                style="@style/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_todo"
                app:layout_constraintTop_toBottomOf="@+id/btnChangeLanguage" />

            <Button
                android:id="@+id/btnMyCollection"
                style="@style/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                app:layout_constraintTop_toBottomOf="@id/btnMyTodo" />

            <Button
                android:id="@+id/btnWaiting"
                style="@style/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stay_tuned"
                app:layout_constraintTop_toBottomOf="@id/btnMyCollection" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>